// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle complex stuff 1`] = `
Array [
  Array [],
]
`;

exports[`should handle complex stuff 2`] = `
Array [
  Array [
    "./.upgreat/plan.json",
    Array [
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "intl",
        "peers": Array [],
        "repo": "https://github.com/andyearnshaw/Intl.js.git",
        "targetVersion": "1.2.5",
        "version": "1.2.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack/json-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "patch",
        "name": "json-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack/json-loader.git",
        "targetVersion": "0.5.7",
        "version": "0.5.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/petkaantonov/bluebird/master/changelog.md",
        "dev": false,
        "diff": "patch",
        "name": "bluebird",
        "peers": Array [],
        "repo": "https://github.com/petkaantonov/bluebird.git",
        "targetVersion": "3.5.5",
        "version": "3.5.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "patch",
        "name": "svg-react-loader",
        "peers": Array [],
        "repo": "https://github.com/jhamlet/svg-react-loader.git",
        "targetVersion": "0.4.6",
        "version": "0.4.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/moment/moment-timezone/master/changelog.md",
        "dev": false,
        "diff": "patch",
        "name": "moment-timezone",
        "peers": Array [],
        "repo": "https://github.com/moment/moment-timezone.git",
        "targetVersion": "0.5.25",
        "version": "0.5.14",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "lodash",
        "peers": Array [],
        "repo": "https://github.com/lodash/lodash.git",
        "targetVersion": "4.17.11",
        "version": "4.17.4",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "d3-time",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-time.git",
        "targetVersion": "1.0.11",
        "version": "1.0.6",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "d3-brush",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-brush.git",
        "targetVersion": "1.0.6",
        "version": "1.0.4",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "d3-axis",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-axis.git",
        "targetVersion": "1.0.12",
        "version": "1.0.7",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "classnames",
        "peers": Array [],
        "repo": "https://github.com/JedWatson/classnames.git",
        "targetVersion": "2.2.6",
        "version": "2.2.5",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "redux-mock-store",
        "peers": Array [],
        "repo": "https://github.com/arnaudbenard/redux-mock-store.git",
        "targetVersion": "1.5.3",
        "version": "1.2.3",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "d3-selection",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-selection.git",
        "targetVersion": "1.4.0",
        "version": "1.1.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "d3-shape",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-shape.git",
        "targetVersion": "1.3.5",
        "version": "1.2.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/paularmstrong/normalizr/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "normalizr",
        "peers": Array [],
        "repo": "https://github.com/paularmstrong/normalizr.git",
        "targetVersion": "3.4.0",
        "version": "3.2.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/prettier/prettier/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "prettier",
        "peers": Array [],
        "repo": "https://github.com/prettier/prettier.git",
        "targetVersion": "1.18.2",
        "version": "1.10.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/sass/node-sass/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "node-sass",
        "peers": Array [],
        "repo": "https://github.com/sass/node-sass.git",
        "targetVersion": "4.12.0",
        "version": "4.7.2",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "redux-thunk",
        "peers": Array [],
        "repo": "https://github.com/reduxjs/redux-thunk.git",
        "targetVersion": "2.3.0",
        "version": "2.1.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "@babel/polyfill",
        "peers": Array [],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.5",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/punkave/sanitize-html/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "sanitize-html",
        "peers": Array [],
        "repo": "https://github.com/punkave/sanitize-html.git",
        "targetVersion": "1.20.1",
        "version": "1.13.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/kelektiv/node-uuid/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "uuid",
        "peers": Array [],
        "repo": "https://github.com/kelektiv/node-uuid.git",
        "targetVersion": "3.3.2",
        "version": "3.0.1",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/core",
        "peers": Array [],
        "repo": null,
        "targetVersion": "7.4.5",
        "version": "7.2.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/FezVrasta/popper.js/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "popper.js",
        "peers": Array [],
        "repo": "https://github.com/FezVrasta/popper.js.git",
        "targetVersion": "1.15.0",
        "version": "1.9.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/prop-types/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "prop-types",
        "peers": Array [],
        "repo": "https://github.com/facebook/prop-types.git",
        "targetVersion": "15.7.2",
        "version": "15.6.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "d3-zoom",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-zoom.git",
        "targetVersion": "1.7.3",
        "version": "1.2.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "@vimeo/player",
        "peers": Array [],
        "repo": "https://github.com/vimeo/player.js.git",
        "targetVersion": "2.9.1",
        "version": "2.5.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "humanize-duration",
        "peers": Array [],
        "repo": "https://github.com/EvanHahn/HumanizeDuration.js.git",
        "targetVersion": "3.18.0",
        "version": "3.15.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/webpack-bundle-analyzer/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "webpack-bundle-analyzer",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/webpack-bundle-analyzer.git",
        "targetVersion": "3.3.2",
        "version": "3.0.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/omichelsen/compare-versions/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "compare-versions",
        "peers": Array [],
        "repo": "https://github.com/omichelsen/compare-versions.git",
        "targetVersion": "3.4.0",
        "version": "3.0.1",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-dnd-html5-backend",
        "peers": Array [],
        "repo": "https://github.com/react-dnd/react-dnd.git",
        "targetVersion": "7.6.0",
        "version": "7.0.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "webpack",
        "peers": Array [],
        "repo": "https://github.com/webpack/webpack.git",
        "targetVersion": "4.33.0",
        "version": "4.6.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/moment/moment/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "moment",
        "peers": Array [],
        "repo": "https://github.com/moment/moment.git",
        "targetVersion": "2.24.0",
        "version": "2.20.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/html-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "html-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/html-loader.git",
        "targetVersion": "0.5.5",
        "version": "0.4.5",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/enzyme/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "enzyme",
        "peers": Array [],
        "repo": "https://github.com/airbnb/enzyme.git",
        "targetVersion": "3.10.0",
        "version": "3.6.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/style-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "style-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/style-loader.git",
        "targetVersion": "0.23.1",
        "version": "0.18.1",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "premajor",
        "name": "babel-core",
        "peers": Array [],
        "repo": null,
        "targetVersion": "6.26.3",
        "version": "7.0.0-bridge.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/babel-plugin-dynamic-import-node/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-plugin-dynamic-import-node",
        "peers": Array [],
        "repo": "https://github.com/airbnb/babel-plugin-dynamic-import-node.git",
        "targetVersion": "2.2.0",
        "version": "1.0.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "fetch-mock",
        "peers": Array [],
        "repo": "https://github.com/wheresrhys/fetch-mock.git",
        "targetVersion": "7.3.3",
        "version": "5.11.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/eslint/eslint/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint",
        "peers": Array [],
        "repo": "https://github.com/eslint/eslint.git",
        "targetVersion": "5.16.0",
        "version": "4.19.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/postcss/autoprefixer/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "autoprefixer",
        "peers": Array [],
        "repo": "https://github.com/postcss/autoprefixer.git",
        "targetVersion": "9.6.0",
        "version": "7.1.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/jest/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "jest",
        "peers": Array [],
        "repo": "https://github.com/facebook/jest.git",
        "targetVersion": "24.8.0",
        "version": "21.2.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/hustcc/jest-canvas-mock/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "jest-canvas-mock",
        "peers": Array [],
        "repo": "https://github.com/hustcc/jest-canvas-mock.git",
        "targetVersion": "2.1.0",
        "version": "1.0.2",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "major",
        "name": "whatwg-fetch",
        "peers": Array [],
        "repo": "https://github.com/github/fetch.git",
        "targetVersion": "3.0.0",
        "version": "2.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/reduxjs/reselect/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "reselect",
        "peers": Array [],
        "repo": "https://github.com/reduxjs/reselect.git",
        "targetVersion": "4.0.0",
        "version": "2.5.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/postcss/postcss-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "postcss-loader",
        "peers": Array [],
        "repo": "https://github.com/postcss/postcss-loader.git",
        "targetVersion": "3.0.0",
        "version": "2.0.6",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/reduxjs/redux/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "redux",
        "peers": Array [],
        "repo": "https://github.com/reduxjs/redux.git",
        "targetVersion": "4.0.1",
        "version": "3.6.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/sinonjs/sinon/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "sinon",
        "peers": Array [],
        "repo": "https://github.com/sinonjs/sinon.git",
        "targetVersion": "7.3.2",
        "version": "2.3.1",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "svgo-loader",
        "peers": Array [],
        "repo": "https://github.com/pozadi/svgo-loader.git",
        "targetVersion": "2.2.0",
        "version": "1.2.1",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "major",
        "name": "d3-scale",
        "peers": Array [],
        "repo": "https://github.com/d3/d3-scale.git",
        "targetVersion": "3.0.0",
        "version": "1.0.6",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/thoughtbot/bourbon/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "bourbon",
        "peers": Array [],
        "repo": "https://github.com/thoughtbot/bourbon.git",
        "targetVersion": "5.1.0",
        "version": "4.2.7",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "lint-staged",
        "peers": Array [],
        "repo": "https://github.com/okonet/lint-staged.git",
        "targetVersion": "8.2.0",
        "version": "6.0.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-loadable",
        "peers": Array [
          "react",
        ],
        "repo": "https://github.com/thejameskyle/react-loadable.git",
        "targetVersion": "5.5.0",
        "version": "5.3.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/souporserious/react-popper/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "react-popper",
        "peers": Array [
          "react",
        ],
        "repo": "https://github.com/souporserious/react-popper.git",
        "targetVersion": "1.3.3",
        "version": "1.0.2",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "major",
        "name": "react-router-dom",
        "peers": Array [
          "react",
        ],
        "repo": "https://github.com/ReactTraining/react-router.git",
        "targetVersion": "5.0.1",
        "version": "4.2.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-proposal-class-properties",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.3",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-proposal-decorators",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.3",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-proposal-nullish-coalescing-operator",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-proposal-object-rest-spread",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-proposal-pipeline-operator",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.3.2",
        "version": "7.2.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/plugin-transform-modules-commonjs",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.2.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/preset-env",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.5",
        "version": "7.2.3",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "@babel/register",
        "peers": Array [
          "@babel/core",
        ],
        "repo": null,
        "targetVersion": "7.4.4",
        "version": "7.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/jest/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-jest",
        "peers": Array [
          "@babel/core",
        ],
        "repo": "https://github.com/facebook/jest.git",
        "targetVersion": "24.8.0",
        "version": "23.4.2",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-intl",
        "peers": Array [
          "prop-types",
          "react",
        ],
        "repo": "https://github.com/yahoo/react-intl.git",
        "targetVersion": "2.9.0",
        "version": "2.4.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/babel/babel-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "patch",
        "name": "babel-loader",
        "peers": Array [
          "@babel/core",
          "webpack",
        ],
        "repo": "https://github.com/babel/babel-loader.git",
        "targetVersion": "8.0.6",
        "version": "8.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack/webpack-dev-server/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "webpack-dev-server",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack/webpack-dev-server.git",
        "targetVersion": "3.7.1",
        "version": "3.1.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/css-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "css-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/css-loader.git",
        "targetVersion": "2.1.1",
        "version": "0.28.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/file-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "file-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/file-loader.git",
        "targetVersion": "4.0.0",
        "version": "1.1.10",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/sass-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "sass-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/sass-loader.git",
        "targetVersion": "7.1.0",
        "version": "6.0.6",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/url-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "url-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/url-loader.git",
        "targetVersion": "2.0.0",
        "version": "0.5.8",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack/webpack-cli/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "webpack-cli",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack/webpack-cli.git",
        "targetVersion": "3.3.3",
        "version": "2.0.9",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/FormidableLabs/webpack-dashboard/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "webpack-dashboard",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/FormidableLabs/webpack-dashboard.git",
        "targetVersion": "3.0.7",
        "version": "0.4.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/adriantoine/enzyme-to-json/master/CHANGELOG.md",
        "dev": true,
        "diff": "patch",
        "name": "enzyme-to-json",
        "peers": Array [
          "enzyme",
        ],
        "repo": "https://github.com/adriantoine/enzyme-to-json.git",
        "targetVersion": "3.3.5",
        "version": "3.3.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/yannickcr/eslint-plugin-react/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-plugin-react",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/yannickcr/eslint-plugin-react.git",
        "targetVersion": "7.13.0",
        "version": "7.7.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/evcohen/eslint-plugin-jsx-a11y/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-plugin-jsx-a11y",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/evcohen/eslint-plugin-jsx-a11y.git",
        "targetVersion": "6.2.1",
        "version": "6.0.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/benmosher/eslint-plugin-import/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-plugin-import",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/benmosher/eslint-plugin-import.git",
        "targetVersion": "2.17.3",
        "version": "2.11.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/prettier/eslint-config-prettier/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint-config-prettier",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/prettier/eslint-config-prettier.git",
        "targetVersion": "4.3.0",
        "version": "2.9.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/prettier/eslint-plugin-prettier/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint-plugin-prettier",
        "peers": Array [
          "eslint",
          "prettier",
        ],
        "repo": "https://github.com/prettier/eslint-plugin-prettier.git",
        "targetVersion": "3.1.0",
        "version": "2.6.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "babel-eslint",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/babel/babel-eslint.git",
        "targetVersion": "10.0.1",
        "version": "9.0.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "jest-html-reporter",
        "peers": Array [
          "jest",
        ],
        "repo": "https://github.com/Hargne/jest-html-reporter.git",
        "targetVersion": "2.5.0",
        "version": "2.4.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/reduxjs/react-redux/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "react-redux",
        "peers": Array [
          "react",
          "redux",
        ],
        "repo": "https://github.com/reduxjs/react-redux.git",
        "targetVersion": "7.0.3",
        "version": "5.0.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/fisshy/react-scroll/master/CHANGELOG.md",
        "dev": false,
        "diff": "patch",
        "name": "react-scroll",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/fisshy/react-scroll.git",
        "targetVersion": "1.7.11",
        "version": "1.7.10",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/STRML/react-resizable/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "react-resizable",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/STRML/react-resizable.git",
        "targetVersion": "1.8.0",
        "version": "1.7.5",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/bvaughn/react-virtualized/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "react-virtualized",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/bvaughn/react-virtualized.git",
        "targetVersion": "9.21.1",
        "version": "9.18.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-dnd",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/react-dnd/react-dnd.git",
        "targetVersion": "7.6.0",
        "version": "7.0.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/gaearon/react-hot-loader/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "react-hot-loader",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/gaearon/react-hot-loader.git",
        "targetVersion": "4.9.0",
        "version": "4.6.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/enzyme/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "enzyme-adapter-react-16",
        "peers": Array [
          "enzyme",
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/airbnb/enzyme.git",
        "targetVersion": "1.14.0",
        "version": "1.5.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/reactjs/react-transition-group/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "react-transition-group",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/reactjs/react-transition-group.git",
        "targetVersion": "4.1.0",
        "version": "2.2.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/securingsincity/react-ace/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "react-ace",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/securingsincity/react-ace.git",
        "targetVersion": "7.0.2",
        "version": "6.2.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/benmosher/eslint-plugin-import/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-import-resolver-webpack",
        "peers": Array [
          "eslint-plugin-import",
          "webpack",
        ],
        "repo": "https://github.com/benmosher/eslint-plugin-import.git",
        "targetVersion": "0.11.1",
        "version": "0.9.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "eslint-config-airbnb",
        "peers": Array [
          "eslint",
          "eslint-plugin-import",
          "eslint-plugin-jsx-a11y",
          "eslint-plugin-react",
        ],
        "repo": "https://github.com/airbnb/javascript.git",
        "targetVersion": "17.1.0",
        "version": "16.1.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/erikras/redux-form/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "redux-form",
        "peers": Array [
          "react",
          "react-redux",
          "redux",
        ],
        "repo": "https://github.com/erikras/redux-form.git",
        "targetVersion": "8.2.3",
        "version": "7.4.2",
      },
    ],
  ],
]
`;

exports[`should handle complex stuff 3`] = `
Array [
  Array [
    "👋 hi, will read ./test/complex-package.json",
  ],
  Array [
    "you have missing peerDependencies that you will need",
  ],
  Array [
    "  svgo",
  ],
  Array [
    "unable to retrieve version info for some packages, these will be ignored in the upgrade plan",
  ],
  Array [
    "  eslint-plugin-xmatters: exotic",
  ],
  Array [
    "🗒  wrote upgrade plan to .upgreat/plan.json",
  ],
  Array [
    "run upgreat up to start the upgrades!",
  ],
]
`;

exports[`should handle simple stuff 1`] = `
Array [
  Array [],
]
`;

exports[`should handle simple stuff 2`] = `
Array [
  Array [
    "./.upgreat/plan.json",
    Array [
      Object {
        "changelog": "https://raw.githubusercontent.com/petkaantonov/bluebird/master/changelog.md",
        "dev": false,
        "diff": "patch",
        "name": "bluebird",
        "peers": Array [],
        "repo": "https://github.com/petkaantonov/bluebird.git",
        "targetVersion": "3.5.5",
        "version": "3.5.0",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "lodash",
        "peers": Array [],
        "repo": "https://github.com/lodash/lodash.git",
        "targetVersion": "4.17.11",
        "version": "4.17.4",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "patch",
        "name": "classnames",
        "peers": Array [],
        "repo": "https://github.com/JedWatson/classnames.git",
        "targetVersion": "2.2.6",
        "version": "2.2.5",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/moment/moment-timezone/master/changelog.md",
        "dev": false,
        "diff": "patch",
        "name": "moment-timezone",
        "peers": Array [],
        "repo": "https://github.com/moment/moment-timezone.git",
        "targetVersion": "0.5.25",
        "version": "0.5.13",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack/json-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "patch",
        "name": "json-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack/json-loader.git",
        "targetVersion": "0.5.7",
        "version": "0.5.4",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "patch",
        "name": "svg-react-loader",
        "peers": Array [],
        "repo": "https://github.com/jhamlet/svg-react-loader.git",
        "targetVersion": "0.4.6",
        "version": "0.4.5",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "babel-register",
        "peers": Array [],
        "repo": null,
        "targetVersion": "6.26.0",
        "version": "6.24.1",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "babel-core",
        "peers": Array [],
        "repo": null,
        "targetVersion": "6.26.3",
        "version": "6.24.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/html-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "html-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/html-loader.git",
        "targetVersion": "0.5.5",
        "version": "0.4.5",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/kelektiv/node-uuid/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "uuid",
        "peers": Array [],
        "repo": "https://github.com/kelektiv/node-uuid.git",
        "targetVersion": "3.3.2",
        "version": "3.0.1",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-moment-proptypes",
        "peers": Array [],
        "repo": "https://github.com/CalebMorris/react-moment-proptypes.git",
        "targetVersion": "1.6.0",
        "version": "1.4.0",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "minor",
        "name": "babel-plugin-transform-object-rest-spread",
        "peers": Array [],
        "repo": null,
        "targetVersion": "6.26.0",
        "version": "6.23.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/style-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "style-loader",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/style-loader.git",
        "targetVersion": "0.23.1",
        "version": "0.16.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/sass/node-sass/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "node-sass",
        "peers": Array [],
        "repo": "https://github.com/sass/node-sass.git",
        "targetVersion": "4.12.0",
        "version": "4.5.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/prop-types/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "prop-types",
        "peers": Array [],
        "repo": "https://github.com/facebook/prop-types.git",
        "targetVersion": "15.7.2",
        "version": "15.6.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/shelljs/shelljs/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "shelljs",
        "peers": Array [],
        "repo": "https://github.com/shelljs/shelljs.git",
        "targetVersion": "0.8.3",
        "version": "0.7.7",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/lacroixdesign/node-neat/master/CHANGELOG.md",
        "dev": true,
        "diff": "premajor",
        "name": "node-neat",
        "peers": Array [],
        "repo": "https://github.com/lacroixdesign/node-neat.git",
        "targetVersion": "2.0.0-beta.0",
        "version": "1.7.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/react/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "react",
        "peers": Array [],
        "repo": "https://github.com/facebook/react.git",
        "targetVersion": "16.8.6",
        "version": "15.4.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "fetch-mock",
        "peers": Array [],
        "repo": "https://github.com/wheresrhys/fetch-mock.git",
        "targetVersion": "7.3.3",
        "version": "5.9.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/babel-preset-airbnb/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-preset-airbnb",
        "peers": Array [],
        "repo": "https://github.com/airbnb/babel-preset-airbnb.git",
        "targetVersion": "3.2.1",
        "version": "2.2.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/jest/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "jest",
        "peers": Array [],
        "repo": "https://github.com/facebook/jest.git",
        "targetVersion": "24.8.0",
        "version": "19.0.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/jest/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-jest",
        "peers": Array [],
        "repo": "https://github.com/facebook/jest.git",
        "targetVersion": "24.8.0",
        "version": "19.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/babel-plugin-dynamic-import-node/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-plugin-dynamic-import-node",
        "peers": Array [],
        "repo": "https://github.com/airbnb/babel-plugin-dynamic-import-node.git",
        "targetVersion": "2.2.0",
        "version": "1.0.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/thoughtbot/bourbon/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "bourbon",
        "peers": Array [],
        "repo": "https://github.com/thoughtbot/bourbon.git",
        "targetVersion": "5.1.0",
        "version": "4.3.4",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/thoughtbot/neat/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "bourbon-neat",
        "peers": Array [],
        "repo": "https://github.com/thoughtbot/neat.git",
        "targetVersion": "3.0.1",
        "version": "2.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/postcss/postcss-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "postcss-loader",
        "peers": Array [],
        "repo": "https://github.com/postcss/postcss-loader.git",
        "targetVersion": "3.0.0",
        "version": "1.3.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/airbnb/enzyme/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "enzyme",
        "peers": Array [],
        "repo": "https://github.com/airbnb/enzyme.git",
        "targetVersion": "3.10.0",
        "version": "2.8.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/postcss/autoprefixer/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "autoprefixer",
        "peers": Array [],
        "repo": "https://github.com/postcss/autoprefixer.git",
        "targetVersion": "9.6.0",
        "version": "6.7.7",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/eslint/eslint/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint",
        "peers": Array [],
        "repo": "https://github.com/eslint/eslint.git",
        "targetVersion": "5.16.0",
        "version": "3.19.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/svg/svgo/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "svgo",
        "peers": Array [],
        "repo": "https://github.com/svg/svgo.git",
        "targetVersion": "1.2.2",
        "version": "0.7.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "webpack",
        "peers": Array [],
        "repo": "https://github.com/webpack/webpack.git",
        "targetVersion": "4.33.0",
        "version": "2.5.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/webpack-bundle-analyzer/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "webpack-bundle-analyzer",
        "peers": Array [],
        "repo": "https://github.com/webpack-contrib/webpack-bundle-analyzer.git",
        "targetVersion": "3.3.2",
        "version": "2.3.1",
      },
      Object {
        "changelog": null,
        "dev": false,
        "diff": "minor",
        "name": "react-intl",
        "peers": Array [
          "prop-types",
          "react",
        ],
        "repo": "https://github.com/yahoo/react-intl.git",
        "targetVersion": "2.9.0",
        "version": "2.2.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/react/master/CHANGELOG.md",
        "dev": false,
        "diff": "major",
        "name": "react-dom",
        "peers": Array [
          "react",
        ],
        "repo": "https://github.com/facebook/react.git",
        "targetVersion": "16.8.6",
        "version": "15.4.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/adriantoine/enzyme-to-json/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "enzyme-to-json",
        "peers": Array [
          "enzyme",
        ],
        "repo": "https://github.com/adriantoine/enzyme-to-json.git",
        "targetVersion": "3.3.5",
        "version": "1.5.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/benmosher/eslint-plugin-import/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-plugin-import",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/benmosher/eslint-plugin-import.git",
        "targetVersion": "2.17.3",
        "version": "2.2.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/evcohen/eslint-plugin-jsx-a11y/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint-plugin-jsx-a11y",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/evcohen/eslint-plugin-jsx-a11y.git",
        "targetVersion": "6.2.1",
        "version": "4.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/yannickcr/eslint-plugin-react/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "eslint-plugin-react",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/yannickcr/eslint-plugin-react.git",
        "targetVersion": "7.13.0",
        "version": "6.10.3",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "babel-eslint",
        "peers": Array [
          "eslint",
        ],
        "repo": "https://github.com/babel/babel-eslint.git",
        "targetVersion": "10.0.1",
        "version": "7.2.3",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "svgo-loader",
        "peers": Array [
          "svgo",
        ],
        "repo": "https://github.com/pozadi/svgo-loader.git",
        "targetVersion": "2.2.0",
        "version": "1.2.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack/webpack-dev-server/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "webpack-dev-server",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack/webpack-dev-server.git",
        "targetVersion": "3.7.1",
        "version": "2.4.2",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/file-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "file-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/file-loader.git",
        "targetVersion": "4.0.0",
        "version": "0.11.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/jantimon/html-webpack-plugin/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "html-webpack-plugin",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/jantimon/html-webpack-plugin.git",
        "targetVersion": "3.2.0",
        "version": "2.28.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/babel/babel-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "babel-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/babel/babel-loader.git",
        "targetVersion": "8.0.6",
        "version": "7.0.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/css-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "css-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/css-loader.git",
        "targetVersion": "2.1.1",
        "version": "0.28.0",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/raw-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "raw-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/raw-loader.git",
        "targetVersion": "3.0.0",
        "version": "0.5.1",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/sass-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "sass-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/sass-loader.git",
        "targetVersion": "7.1.0",
        "version": "6.0.3",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/webpack-contrib/url-loader/master/CHANGELOG.md",
        "dev": true,
        "diff": "major",
        "name": "url-loader",
        "peers": Array [
          "webpack",
        ],
        "repo": "https://github.com/webpack-contrib/url-loader.git",
        "targetVersion": "2.0.0",
        "version": "0.5.8",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/YouCanBookMe/react-datetime/master/CHANGELOG.md",
        "dev": false,
        "diff": "minor",
        "name": "react-datetime",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/YouCanBookMe/react-datetime.git",
        "targetVersion": "2.16.3",
        "version": "2.8.8",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/facebook/react/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "react-addons-test-utils",
        "peers": Array [
          "react-dom",
        ],
        "repo": "https://github.com/facebook/react.git",
        "targetVersion": "15.6.2",
        "version": "15.4.2",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "react-styleguidist",
        "peers": Array [
          "react",
          "react-dom",
        ],
        "repo": "https://github.com/styleguidist/react-styleguidist.git",
        "targetVersion": "9.1.5",
        "version": "6.0.31",
      },
      Object {
        "changelog": "https://raw.githubusercontent.com/benmosher/eslint-plugin-import/master/CHANGELOG.md",
        "dev": true,
        "diff": "minor",
        "name": "eslint-import-resolver-webpack",
        "peers": Array [
          "eslint-plugin-import",
          "webpack",
        ],
        "repo": "https://github.com/benmosher/eslint-plugin-import.git",
        "targetVersion": "0.11.1",
        "version": "0.8.1",
      },
      Object {
        "changelog": null,
        "dev": true,
        "diff": "major",
        "name": "eslint-config-airbnb",
        "peers": Array [
          "eslint",
          "eslint-plugin-import",
          "eslint-plugin-jsx-a11y",
          "eslint-plugin-react",
        ],
        "repo": "https://github.com/airbnb/javascript.git",
        "targetVersion": "17.1.0",
        "version": "14.1.0",
      },
    ],
  ],
]
`;

exports[`should handle simple stuff 3`] = `
Array [
  Array [
    "👋 hi, will read ./test/simple-package.json",
  ],
  Array [
    "you have missing peerDependencies that you will need",
  ],
  Array [
    "  moment,@babel/core",
  ],
  Array [
    "🗒  wrote upgrade plan to .upgreat/plan.json",
  ],
  Array [
    "run upgreat up to start the upgrades!",
  ],
]
`;
